<resources>
    <string name="app_name">To Do List App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task">Task</string>
    <string name="due_date">Due Date</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="TryAgain">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
</resources>