<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.todolistapp.model.TaskViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".editAddPageFragment">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task"
            android:text="@={viewModel.task}"
            app:errorEnabled = "true"
            android:layout_marginTop="40sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.dueDate}"
            android:hint="@string/due_date"
            android:inputType="date"
            android:layout_marginTop="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            app:layout_constraintTop_toBottomOf="@+id/task"
            app:layout_constraintStart_toStartOf="@id/task" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@={viewModel.description}"
            android:hint="@string/description"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:layout_constraintStart_toStartOf="@id/task" />

        <Button
            android:id="@+id/deletebutton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="16dp"
            style="?attr/materialButtonOutlinedStyle"
            app:layout_constraintStart_toStartOf="@id/task"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <Button
            android:id="@+id/editaddbutton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10sp"
            app:layout_constraintStart_toEndOf="@id/deletebutton"
            app:layout_constraintTop_toBottomOf="@id/description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>